* show all smoke in the detail graphs, even if it's out of the scale. -- niko,
  reported by Oskar Liljeblad <oskar *osk.mine.nu> as Debian bug #412826

2007/05/02 -- released version 2.1.1
* fixed scaling of detail graphs. They were all scaled to max_rtt
  if it was defined --tobi

2007/04/29 -- released version 2.1.0

* add new echoping 6 plugin probes: EchoPingDNS, EchoPingLDAP, EchoPingWhois
  -- niko
* don't test echoping or curl usage if running as a CGI --niko
* bail out at startup with an error message if LC_ALL is set --niko
* New Presentation option Charts. Charts are based on the new 'sorter' plugins.
  There are sample plugins for Loss, Max, Median, StdDev based Charts -- tobi
* new matcher Medratio (compare two medians) -- tobi
* fixes for Median matcher -- tobi
* make the CGI not croak if a password file is not readable. -- niko
* don't die if syslogd is dead -- niko, reported by 
  Christoph Biedl <cbiedl *gmx.de> as Debian bug #395056
* add sourceaddress configurability to FPing probe (requires -S flag) -- Norman Rasmussen norman rasmussen.co.za
* allow . in section names ... 
* in FTPtransfer probe set destfilename to srcfilename if it is empty
* in FTPtransfer probe strip path elements from srcfile when building destfile
* alerts can now have a priority. if multiple prioritized alerts match,
  only the one with the highest priority will cause any action. Alerts
  without priority setting are not affected eitherway. --tobi
* make the LDAP probe 'scope' option actually work. -- niko
* new probe WebProxyFilter exercies a filtering web proxy firewall by
  requesting banned pages. It tests if the data returned from the proxy
  looks like the page telling users that they came upon a banned page. When
  ever a real page can be retreived, a loss is logged. --tobi
* some touchups to the graph comments to be a bit less 'ping' focussed -- tobi
* configuration option mailtemplate lets you configure the alert message content -- tobi