@@ -204,13 +204,14 @@ sub test_usage {
 	my %arghash = %$arghashref;
 
 	for my $feature (keys %arghash) {
-		if (`$bin $arghash{$feature} 1 127.0.0.1 2>&1` =~ /invalid option|usage/i) {
+		system("$bin $arghash{$feature} 1 0.0.0.1 >/dev/null 2>&1");
+		if ($? == 2) {
 			push @unsupported, $feature;
 			$self->do_log("Note: your curl doesn't support the $feature feature (option $arghash{$feature}), disabling it");
 		}
 	}
 	map { delete $arghashref->{$_} } @unsupported;
-	if (`$bin -o /dev/null -w '<%{time_redirect}>\n' 127.0.0.1 2>&1` =~ /^<>/m) {
+	if (`$bin -o /dev/null -w '<%{time_redirect}>\n' 0.0.0.1 2>&1` =~ /^<>/m) {
 		$self->do_log("Note: your curl doesn't support the 'time_redirect' output variable; 'include_redirects' will not function.");
 	}
 	return;
